--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1538,7 +1538,6 @@ section{
    html{
       font-size: 55%;
    }
-
 }
 
 @media (max-width:768px){
@@ -1782,11 +1781,6 @@ h2 {
    color: var(--black);
 }
 
-.chat-container .friend-list {
-   display: flex;
-   flex-direction: column;
-   gap: 1rem;
-}
 
 /* Search Bar Styling */
 .filter-form {
@@ -1862,92 +1856,111 @@ h2 {
 
 /* Chat Container */
 .chat-container {
-   max-width: 750px;
-   margin: 50px auto;
+   width: 100%;
+   max-height: calc(100dvh - 88px);
    background: var(--white);
-   border-radius: 10px;
-   box-shadow: 0 0 10px rgba(0,0,0,0.1);
    display: flex;
    flex-direction: column;
 }
-
 /* Chat Header */
-.chat-header {
+.chat-container .chat-header {
    background: var(--main-color);
-   color: var(--white);
+   color: var(--white) !important;
    padding: 0.5rem 1rem;
    display: flex;
    align-items: center;
+   gap: 1rem;
+   font-size: 1.75rem;
+}
+.chat-container .chat-header .btn {
+   width: fit-content;
+   padding: 0;
+   margin: 0;
+}
+.chat-container .chat-header a:hover {
+   background-color: inherit;
+}
+.chat-container .chat-header h2 {
+   padding: 0;
+   margin: 0;
+   color: var(--white);
 }
 .chat-header img {
-   width: 40px;
-   height: 40px;
+   width: 60px;
+   height: 60px;
    border-radius: 50%;
 }
 
 /* Chat Messages */
-.chat-messages {
+.chat-container .chat-messages {
    flex: 1;
-   padding: 0.8rem;
+   padding: 1rem;
    overflow-y: auto;
    display: flex;
    flex-direction: column;
 }
 
 /* Message Styling */
-.message-pvp {
+.chat-container .message {
    max-width: 80%;
-   padding: 0.65rem 0.8rem;
+   padding: 0.8rem 1rem;
    margin: 5px 0;
    border-radius: 1rem;
    word-wrap: break-word;
+   display: flex;
+   flex-direction: column-reverse;
+   position: relative !important;
 }
-.sent {
+
+.chat-container .message p {
+   font-size: 1.75rem !important;
+}
+.chat-container .message.sent {
    background: var(--main-color);
    color: var(--white);
    align-self: flex-end;
+   justify-content: flex-end;
 }
-.received {
+
+.chat-container .message.sent .download-file {
+   background: var(--light-bg);
+   color: var(--black);
+   text-align: right;
+}
+.chat-container .message.received {
    background: var(--light-bg);
    color: var(--black);
    align-self: flex-start;
 }
-.message-pvp img {
-   max-width: 100px;
-   border-radius: 5px;
-   margin-top: 5px;
-}
-
 /* Download File Link */
 .download-file {
    display: block;
    color: var(--white);
    background-color: var(--main-color);
-   padding: 5px 10px;
+   padding: 5px;
    border-radius: 5px;
    text-decoration: none;
-   font-weight: bold;
-   margin-top: 5px;
-}
-.download-file:hover {
-   background-color: #363b96;
+   font-size: 1.75rem;
 }
 
 /* Chat Input */
 .chat-input {
    display: flex;
    align-items: center;
-   padding: 10px;
-   background: #fff;
+   padding: 1rem;
+   background: var(--white);
    border-top: 1px solid var(--light-bg);
    gap: 1rem;
 }
 .chat-input input[type="text"] {
+   font-size: 1.75rem;
    flex: 1;
    padding: 10px;
    border: 1px solid var(--light-bg);
    border-radius: 5px;
    outline: none;
+   background: inherit;
+   color: var(--black);
 }
 .chat-input input[type="file"] {
    display: none;
@@ -1959,7 +1972,7 @@ h2 {
 }
 .chat-input button {
    background: var(--main-color);
-   color: #fff;
+   color: var(--white);
    border: none;
    padding: 10px 15px;
    border-radius: 5px;
@@ -1974,20 +1987,20 @@ h2 {
    display: none;
    align-items: center;
    padding: 8px 10px;
-   background: #f1f1f1;
+   background: var(--light-bg);
    border-radius: 0.5rem;
-   border: 1px solid #ccc;
+   border: 1px solid var(--light-color);
    max-width: 300px;
 }
 .file-preview span {
    font-size: 14px;
-   color: #333;
+   color: var(--black);
    word-break: break-all;
    margin-right: 0.5rem;
 }
 .file-preview .remove-file {
    cursor: pointer;
-   color: red;
+   color: var(--red);
    font-weight: bold;
    margin-left: auto;
    padding: 0 8px;
